optimized martix calculations and array creation

--- a/pldsmodel.ipynb
+++ b/pldsmodel.ipynb
@@ -100,48 +100,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "llpd = logposteriorDerivative(y, C, d, A, B, q, q0, u, n_time_steps, n_neurons, n_stimuli_dims, nld):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.45458436 -3.52913903 -0.23777874 -0.27522849  6.07159269]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([   0.        ,    0.        ,    0.        , ...,  547.2788291 ,\n",
-       "        282.81348064,  -56.99468261])"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "llpd(mu)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 212,
    "metadata": {
     "collapsed": false
@@ -176,7 +134,7 @@
     "        \n",
     "        diag = []\n",
     "        off_diag = []\n",
-    "        diag += -[Q0inv]\n",
+    "        diag.append(scsp.coo_matrix(-Q0inv))\n",
     "        ATQinvA = A.T @ Qinv @ A\n",
     "        ATQinv = A.T @ Qinv\n",
     "        QinvA = Qinv @ A\n",
@@ -188,10 +146,11 @@
     "                                          for i in range(n_neurons)) + ATQinvAminusQinv))\n",
     "            off_diag.append(scsp.coo_matrix(-ATQinv))\n",
     "        \n",
-    "        \n",
+    "        diag.append(scsp.coo_matrix(np.zeros_like(diag[0])))\n",
     "        h = scsp.block_diag(diag)\n",
     "        od = scsp.block_diag(off_diag)\n",
-    "        h[n_time_steps:2 * ntimesteps ]\n",
+    "        h[n_time_steps:, :] = diag[:ntimesteps, :]\n",
+    "        h[:, n_time_steps:] = diag[:, :ntimesteps]\n",
     "        \n",
     "        return h\n",
     "    return f\n",
@@ -298,7 +257,7 @@
     "    mu = nr_algo(f, df, Hf, mu)\n",
     "\n",
     "    # negative inverse of Hessian is covariance matrix\n",
-    "    covariance = -np.linalg.inv(H(mu))\n",
+    "    covariance = -scsp.linalg.inv(H(mu))\n",
     "    return mu, covariance"
    ]
   },
@@ -355,7 +314,9 @@
     "            C[i] = dC[i*(nld+1) + 1:i*(nld+1)]\n",
     "\n",
     "        Hjll = np.zeros((n_neurons + n_neurons * nld, n_neurons + n_neurons * nld))\n",
-    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "        for i in range(n_neurons):\n",
     "            Hjll[i * (nld + 1), i * (nld + 1)] = sum(np.exp(C[i] @ mu[t*nld:(t+1)*nld] + d[i] +\n",
     "                                                    .5 * C[i] @ cov[t*nld:(t+1)*nld, t*nld:(t+1)*nld] @ C[i])\n",
@@ -375,6 +336,39 @@
     "                (u[t] + cov[t*nld:(t+1)*nld, t*nld:(t+1)*nld] @ C[i])\n",
     "                for t in range(n_time_steps))\n",
     "                ])\n",
+    "        return Hjll\n",
+    "    return f\n",
+    "\n",
+    "\n",
+    "def jllHessianOptimized(n_neurons, nld, mu, cov, n_time_steps, y):\n",
+    "    def f(dC):\n",
+    "        d = np.empty(n_neurons)\n",
+    "        C = np.empty((n_neurons, nld))\n",
+    "\n",
+    "        for i in range(n_neurons+1):\n",
+    "            d[i] = dC[i*(nld+1)]\n",
+    "            C[i] = dC[i*(nld+1) + 1:i*(nld+1)]\n",
+    "\n",
+    "        blocks = []\n",
+    "        block = np.zeros((1 + nld)*(1 + nld)).reshape(-1, 1+nld)\n",
+    "        \n",
+    "        for i in range(n_neurons):\n",
+    "            block[0, 0] = sum(np.exp(C[i] @ mu[t*nld:(t+1)*nld] + d[i] +\n",
+    "                                                    .5 * C[i] @ cov[t*nld:(t+1)*nld, t*nld:(t+1)*nld] @ C[i])\n",
+    "                                                    for t in range(n_time_steps))\n",
+    "\n",
+    "            block[1, 1:] = sum((mu[t] + cov[t, t] @ C[i]) * np.exp(C[i] @ mu[t*nld:(t+1)*nld] + d[i] +\n",
+    "                    .5 * C[i] @ cov[t*nld:(t+1)*nld, t*nld:(t+1)*nld] @ C[i]) for t in range(n_time_steps))\n",
+    "\n",
+    "            block[1:, 1] = block[1, 1:].T\n",
+    "\n",
+    "            block[1:, 1:] = np.array([sum(y[t][i] * cov[t, t] @ C[i] + mu[t] +\n",
+    "                np.outer(mu[t] + cov[t, t] @ C[i], mu[t] + cov[t, t] @ C[i])[i] +\n",
+    "                np.exp(C[i] @ mu[t*nld:(t+1)*nld] + d[i] + .5 * C[i] @ cov[t*nld:(t+1)*nld, t*nld:(t+1)*nld] @ C[i]) *\n",
+    "                (u[t] + cov[t*nld:(t+1)*nld, t*nld:(t+1)*nld] @ C[i])\n",
+    "                for t in range(n_time_steps))\n",
+    "                ])\n",
+    "        Hjll = scsp.block_diag(blocks)\n",
     "        return Hjll\n",
     "    return f\n"
    ]
